--- a/save/webpages/mir-layout/scss/project_styles/_page_start.scss
+++ b/save/webpages/mir-layout/scss/project_styles/_page_start.scss
@@ -181,6 +181,10 @@
     .carousel-item {
       display: block;
       float: none;
+      &__content-box {
+        max-width: none;
+        margin-right: 0;
+      }
     }
     .carousel-control-prev,
     .carousel-control-next,
