--- a/save/webpages/mir-layout/scss/project_styles/_variables.scss
+++ b/save/webpages/mir-layout/scss/project_styles/_variables.scss
@@ -79,6 +79,7 @@ $h3-font-size: 1.125rem;
 $font-weight-bold: 700 !default;
 $font-weight-bolder: $font-weight-bold;
 
-$border-radius: 1.25rem;
+$pp-border-radius: 1.25rem;
+$border-radius: 0;
 $input-focus-border-color: $p-petrol;
 $dropdown-border-radius: 0;
